Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20117

Assertion `0' failed in row_sel_get_clust_rec_for_mysql

    XMLWordPrintable

Details

    Description

      Problem hit during RQG testing on
      10.4.7 commit 819c40d694071e56adb62ded97561717edb59f23 2019-07-22
      10.4.7 showed that problem in minimum already ~ 2019-07-15.
       
      2019-07-22 18:28:23 24 [ERROR] InnoDB: Clustered record for sec rec not found index `col_int` of table `test`.`t1`
      InnoDB: sec index record PHYSICAL RECORD: n_fields 2; compact format; info bits 0
       0: SQL NULL;
      |  1: len 4; hex 80000004; asc     ;;
       | 
       InnoDB: clust index record PHYSICAL RECORD: n_fields 73; compact format; info bits 32
      |  0: len 4; hex 80000003; asc     ;;
      |  1: len 6; hex 0000000015f8; asc       ;;
      |  2: len 7; hex 31000001851961; asc 1     a;;
      |  3: len 4; hex 80000002; asc     ;;
      |  4: len 4; hex ffffffff; asc     ;;
      |  5: SQL NULL;
      |  6: SQL NULL;
      ....
      |  72: SQL NULL;
      # 2019-07-22T18:28:34 [208245] | TRANSACTION 5624, ACTIVE 0 sec fetching rows
      # 2019-07-22T18:28:34 [208245] | mysql tables in use 1, locked 1
      # 2019-07-22T18:28:34 [208245] | 3 lock struct(s), heap size 1160, 5 row lock(s), undo log entries 2
      # 2019-07-22T18:28:34 [208245] | MySQL thread id 24, OS thread handle 140235059529472, query id 2900 localhost 127.0.0.1 root Updating
      # 2019-07-22T18:28:34 [208245] | DELETE FROM t1 WHERE col_int = 5 OR col_int IS NULL  /* E_R Thread9 QNO 2263 CON_ID 24 */
      ....
      | mysqld: torage/innobase/row/row0sel.cc:3356: dberr_t row_sel_get_clust_rec_for_mysql(row_prebuilt_t*, dict_index_t*, const rec_t*, que_thr_t*, const rec_t**, ulint**, mem_heap_t**, dtuple_t**, mtr_t*): Assertion `0' failed.
      | 190722 18:28:23 [ERROR] mysqld got signal 6 ;
      
      

      Attachments

        1. MDEV-20117.tgz
          3 kB
        2. MDEV-20117.yy
          1 kB
        3. prt
          73 kB

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              mleich Matthias Leich
              Votes:
              1 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 10d 5h
                  10d 5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.